CHANGES IN VERSION 0.99.1
------------------------
* Added detection of chain length to function call


CHANGES IN VERSION 0.99.0
------------------------
* Initial commit