@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/Ibex.Data.R
+% Please edit documentation in R/ibex.data.R
 \docType{data}
 \name{ibex.data}
 \alias{ibex.data}
